--- a/package.json
+++ b/package.json
@@ -6,20 +6,30 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
-    "@types/node": "20.8.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@testing-library/user-event": "14.5.1",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
-    "eslint": "8.52.0",
-    "eslint-config-next": "^14.0.0",
-    "next": "^14.0.0",
+    "babel-jest": "29.7.0",
+    "eslint": "8.53.0",
+    "eslint-config-next": "^14.0.2",
+    "next": "^14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@everapi/freecurrencyapi-js": "1.0.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
