feat: Added npm install command for @types/everapi__freecurrencyapi-js
Added npm install command for @types/everapi__freecurrencyapi-js to tasks.json

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -50,6 +50,10 @@
     "npm run test": {
       "name": "test",
       "command": "npm run test"
+    },
+    "npm install --save-dev @types/everapi__freecurrencyapi-js": {
+      "name": "npm i --save-dev @types/everapi__freecurrencyapi-js",
+      "command": "npm install --save-dev @types/everapi__freecurrencyapi-js"
     }
   }
 }
